# paas-logdrain-scanner

./: README.md  manifest.yml  pyproject.toml  requirements.in  requirements.txt
config/: settings.py  urls.py
core/: cloudfoundry.py  run_scan.py  slack.py
scanner/: forms.py  models.py  urls.py  views.py
scanner/management/commands/: cf-log-drain-checker.py  load_spaces_db.py
scanner/migrations/: 0001_initial.py  0002_running.py  0003_remove_applications_bound.py
scanner/templates/: home-page.html
